[gd_scene load_steps=24 format=3 uid="uid://dkr37w1h5erwl"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_qg5e1"]
[ext_resource type="Texture2D" uid="uid://bwab3atf26365" path="res://assets/texture/options_menu.tres" id="2_w404f"]
[ext_resource type="Texture2D" uid="uid://dqh5db3rwloxw" path="res://assets/sprite/PNG/Default/tile_cloud.png" id="3_h6t7r"]
[ext_resource type="FontFile" uid="uid://d2um1g7tuuta4" path="res://assets/fonts/Madimi_One/MadimiOne-Regular.ttf" id="4_qb4fc"]
[ext_resource type="Texture2D" uid="uid://bwv7nmp827wf8" path="res://assets/sprite/PNG/Default/blue_body_circle.png" id="5_d87ob"]
[ext_resource type="Texture2D" uid="uid://cxyu040dcwlkr" path="res://assets/sprite/PNG/Default/face_a.png" id="6_oph0k"]
[ext_resource type="Texture2D" uid="uid://dte18mhb6sgvi" path="res://assets/sprite/PNG/Default/yellow_body_rhombus.png" id="7_ndy4a"]
[ext_resource type="Texture2D" uid="uid://1gptmyhlheip" path="res://assets/sprite/PNG/Default/red_body_square.png" id="8_8th7o"]
[ext_resource type="Texture2D" uid="uid://bfvh1ev3gjfa" path="res://assets/sprite/PNG/Default/face_b.png" id="9_s4yq4"]
[ext_resource type="Texture2D" uid="uid://bf2qb5lxbicev" path="res://assets/sprite/PNG/Default/face_f.png" id="10_gxh3e"]
[ext_resource type="Theme" uid="uid://e1cukr0ffdpe" path="res://assets/texture/menu.tres" id="11_ir2kl"]
[ext_resource type="AudioStream" uid="uid://b8no8f8watl86" path="res://assets/sfx/click.wav" id="12_jyykd"]

[sub_resource type="LabelSettings" id="LabelSettings_t5aq1"]
font = ExtResource("4_qb4fc")
font_size = 70
outline_size = 1
shadow_size = 20
shadow_color = Color(0.139184, 0.351246, 0.332102, 0.682353)

[sub_resource type="LabelSettings" id="LabelSettings_04npw"]
font = ExtResource("4_qb4fc")
font_size = 30
shadow_size = 8
shadow_color = Color(0.701906, 0.565433, 1.92523e-07, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k5ckj"]
font = ExtResource("4_qb4fc")

[sub_resource type="LabelSettings" id="LabelSettings_qxghl"]
font = ExtResource("4_qb4fc")
font_size = 30
shadow_size = 8
shadow_color = Color(0.760064, 0.00104023, 8.66354e-07, 1)

[sub_resource type="LabelSettings" id="LabelSettings_frnkj"]
font = ExtResource("4_qb4fc")

[sub_resource type="LabelSettings" id="LabelSettings_lidni"]
font = ExtResource("4_qb4fc")

[sub_resource type="LabelSettings" id="LabelSettings_ub343"]
font = ExtResource("4_qb4fc")
font_size = 30
shadow_size = 8
shadow_color = Color(0, 0.470166, 0.757169, 1)

[sub_resource type="Theme" id="Theme_rp4kd"]
CheckButton/constants/check_v_offset = 0
CheckButton/constants/icon_max_width = 30
CheckButton/fonts/font = ExtResource("4_qb4fc")

[sub_resource type="Theme" id="Theme_cefyo"]

[sub_resource type="LabelSettings" id="LabelSettings_7ioho"]
font = ExtResource("4_qb4fc")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_eewwb"]
font = ExtResource("4_qb4fc")
font_size = 20

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qg5e1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 816.0
offset_bottom = 488.0
scale = Vector2(1.0051, 0.995511)
texture = ExtResource("2_w404f")

[node name="TileCloud2" type="Sprite2D" parent="TextureRect"]
position = Vector2(457.665, 40.1804)
scale = Vector2(0.625, 0.65)
texture = ExtResource("3_h6t7r")

[node name="TileCloud2" type="Sprite2D" parent="TextureRect/TileCloud2"]
position = Vector2(-18.4, 49.2308)
scale = Vector2(0.625, 0.65)
texture = ExtResource("3_h6t7r")

[node name="TileCloud3" type="Sprite2D" parent="TextureRect"]
position = Vector2(35.8172, 40.1804)
scale = Vector2(0.625, 0.65)
texture = ExtResource("3_h6t7r")

[node name="TileCloud2" type="Sprite2D" parent="TextureRect/TileCloud3"]
position = Vector2(-18.4, 49.2308)
scale = Vector2(0.625, 0.65)
texture = ExtResource("3_h6t7r")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 30.0
offset_right = 427.0
offset_bottom = 123.0
text = "SHAPESHIFT"
label_settings = SubResource("LabelSettings_t5aq1")

[node name="Triangle" type="Node" parent="."]

[node name="Triangle" type="Label" parent="Triangle"]
offset_left = 612.0
offset_top = 254.0
offset_right = 750.0
offset_bottom = 295.0
text = "RHOMBUS "
label_settings = SubResource("LabelSettings_04npw")

[node name="Label2" type="Label" parent="Triangle"]
offset_left = 612.0
offset_top = 295.0
offset_right = 742.0
offset_bottom = 342.0
text = "WALK ON WALLS
LIKE A MADMAN"
label_settings = SubResource("LabelSettings_k5ckj")

[node name="Square" type="Node" parent="."]

[node name="Square" type="Label" parent="Square"]
offset_left = 49.0
offset_top = 254.0
offset_right = 156.0
offset_bottom = 295.0
text = "SQUARE
"
label_settings = SubResource("LabelSettings_qxghl")

[node name="Label" type="Label" parent="Square"]
offset_left = 49.0
offset_top = 295.0
offset_right = 147.0
offset_bottom = 344.0
text = "PUSH BOXES
SECRET SPY"
label_settings = SubResource("LabelSettings_frnkj")

[node name="Node3" type="Node" parent="."]

[node name="Label" type="Label" parent="Node3"]
offset_left = 612.0
offset_top = 104.0
offset_right = 652.0
offset_bottom = 127.0
text = "ROLL YOUR WAY
OUT OF PRISON"
label_settings = SubResource("LabelSettings_lidni")

[node name="Circle" type="Label" parent="Node3"]
offset_left = 612.0
offset_top = 63.0
offset_right = 701.0
offset_bottom = 104.0
text = "CIRCLE"
label_settings = SubResource("LabelSettings_ub343")

[node name="BlueBodyCircle" type="Sprite2D" parent="."]
position = Vector2(664, 198)
texture = ExtResource("5_d87ob")

[node name="FaceA" type="Sprite2D" parent="."]
position = Vector2(664, 200)
texture = ExtResource("6_oph0k")

[node name="YellowBodyRhombus" type="Sprite2D" parent="."]
position = Vector2(667, 402)
texture = ExtResource("7_ndy4a")

[node name="RedBodySquare" type="Sprite2D" parent="."]
position = Vector2(89, 407)
texture = ExtResource("8_8th7o")

[node name="FaceB" type="Sprite2D" parent="."]
position = Vector2(666, 405)
texture = ExtResource("9_s4yq4")

[node name="FaceF" type="Sprite2D" parent="."]
position = Vector2(89, 409)
texture = ExtResource("10_gxh3e")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = 320.0
offset_top = 148.0
offset_right = 470.0
offset_bottom = 188.0

[node name="Fullscreen" type="CheckButton" parent="."]
layout_mode = 2
offset_left = 327.0
offset_top = 304.0
offset_right = 454.0
offset_bottom = 334.0
theme = SubResource("Theme_rp4kd")
text = "Full Screen
"

[node name="Back" type="Button" parent="."]
layout_mode = 2
offset_left = 361.0
offset_top = 376.0
offset_right = 459.0
offset_bottom = 421.0
theme = ExtResource("11_ir2kl")
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_jyykd")
bus = &"SFX"

[node name="music" type="HSlider" parent="."]
layout_mode = 0
offset_left = 327.0
offset_top = 264.0
offset_right = 505.0
offset_bottom = 280.0
theme = SubResource("Theme_cefyo")
min_value = -30.0
max_value = 0.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 232.0
offset_right = 437.0
offset_bottom = 255.0
text = "Music Volume"
label_settings = SubResource("LabelSettings_7ioho")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 158.0
offset_right = 489.0
offset_bottom = 181.0
text = "SFX Volume
"
label_settings = SubResource("LabelSettings_eewwb")

[node name="effect" type="HSlider" parent="."]
layout_mode = 0
offset_left = 327.0
offset_top = 192.0
offset_right = 505.0
offset_bottom = 208.0
min_value = -30.0
max_value = 0.0

[connection signal="toggled" from="Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="effect" to="." method="_on_effect_value_changed"]
